--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 h1 {
   color: blueviolet;
-  padding:10px
+  padding:10px;
   justify-content:center;
-  
+
 }
 body{
-background-color: black;
+background-color:black;
+color: white;
 }
